# cxl-metadata-driver

lib/: CMakeLists.txt  README.md
lib/src/: Makefile  a.out  dmalloc.h  fam_main.cc  gapbs_middleware.hh  main.cc  s_dmalloc.cc  s_dmalloc.hh  s_permissions.cc  s_permissions.hh  simple_graphs_middleware.cc  simple_graphs_middleware.hh  test.cc  utility.cc  utility.hh
